<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="prev_match">Prev. Match</string>
    <string name="next_match">Next Match</string>
    <string name="date">2018-07-22</string>
    <string name="home_score">3</string>
    <string name="away_score">2</string>
    <string name="vs">VS</string>
    <string name="home_club">Chelsea FC</string>
    <string name="home_formation">4-2-3-1</string>
    <string name="away_club">Arsenal FC</string>
    <string name="goals">Goals</string>
    <string name="home_goals">9\':Pedro Rodriguez;\n20\':Alvaro Morata;\n81\':Marcos Alonso;</string>
    <string name="away_goals">37\':Henrikh Mkhitaryan;\n41\':Alex Iwobi;</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="home_gk">Kepa Arrizabalaga;</string>
    <string name="away_gk">Petr Cech;</string>
    <string name="home_df">Cesar Azpilicueta;\n Antonio Ruediger;\n David Luiz;\n Marcos Alonso;</string>
    <string name="away_df">Hector Bellerin;\n Shkodran Mustafi;\n Sokratis Papastathopoulos;\n Nacho Monreal;</string>
    <string name="home_mf">N\'Golo Kante;\n Jorginho;\n Ross Barkley;</string>
    <string name="away_mf">Granit Xhaka;\n Lucas Torreira;\n Pierre-Emerick Aubameyang;\n Mesut Oezil;\n Henrikh Mkhitaryan;</string>
    <string name="home_fw">Pedro Rodriguez;\n Alvaro Morata;\n Eden Hazard;</string>
    <string name="away_fw">Alexandre Lacazette;</string>
    <string name="home_subs">Wilfredo Caballero;\n Andreas Christensen;\n Davide Zappacosta;\n Victor Moses;\n Eden Hazard;\n Mateo Kovacic;\n Olivier Giroud;</string>
    <string name="away_subs">Bernd Leno;\n Stephan Lichtsteiner;\n Mohamed Elneny;\n Lucas Torreira;\n Aaron Ramsey;\n Danny Welbeck;\n Alexandre Lacazette;</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="strip">-</string>
    <string name="english_premier_league">English Premier League</string>
    <string name="german_bundesliga">German Bundesliga</string>
    <string name="italian_serie_a">Italian Serie A</string>
    <string name="french_ligue_1">French Ligue 1</string>
    <string name="spanish_la_liga">Spanish La Liga</string>
    <string name="favorites">Favorites</string>
</resources>
