<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_prev"
        android:icon="@drawable/icons8_trophy_out_24"
        android:title="@string/prev_match"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_next"
        android:icon="@drawable/icons8_schedule_24"
        android:title="@string/next_match"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>